Fixed some spacing

--- a/src/style.css
+++ b/src/style.css
@@ -55,7 +55,7 @@ span {
 
 .project-section {
   background: white;
-  padding: 100px 0 100px 0;
+  padding: 20px 0 100px 0;
 }
 
 h3 {
